MediaWiki supports over 400 languages. Many localisations are updated regularly.
Below only new and removed languages are listed, as well as changes to languages
because of Phabricator reports.

* (T292166) Updated namespace names for the Lombard language.
* (T291899) Added language support for Xiang Chinese (hsn).
* (T292612) Added language support for S'gaw Karen (ksw).

=== Breaking changes in 1.38 ===
* (T291008) The IP class, deprecated since 1.35 in favor of the IPUtils library,
  has been removed. The IP related regexes which were also deprecated in favor
  of the IPUtils library were also removed, IPUtils::RE_* should be used
  instead.
* LinkCache::singleton(), deprecated since 1.28, has been removed.
* RepoGroup::singleton(), ::destroySingletons() and setSingleton(), all
  deprecated since 1.34, have been removed.
* The following methods from FileDeleteForm were removed:
  - ::__construct (the class is no longer newable)
  - ::execute()
  - ::haveDeletableFile()
  Use FileDeleteAction instead.
* MessageCache::singleton(), deprecated since 1.34, has been removed.
* LockManagerGroup::singleton() and ::destroySingletons(), both deprecated since
  1.34, have been removed.
* FileBackendGroup::singleton() and ::destroySingletons(), both deprecated since
  1.35, have been removed.
* TemplateParser used to support disabling the cache with a boolean parameter
  in its constructor. This was deprecated in 1.35 and has now been removed.
* The ArticleUndeleteLogEntry hook, deprecated in 1.37, was removed.
* The BeforeResetNotificationTimestamp hook, deprecated in 1.37, was removed.
* The global function mimeTypeMatch() has been removed without a deprecation
  process.
* The following JavaScript mw.config keys have been removed:
  - $wgCookiePrefix
  - $wgCookieDomain
  - $wgCookiePath
  - $wgCookieExpiration
  Use mw.cookie from the mediawiki.cookie module instead.
* The signature of PageUpdater::markAsRevert method was changed. It has never