@@ -1,0 +1,12 @@
+<?php
+/** Farefare (farefare)
+ *
+ * To improve a translation please visit https://translatewiki.net
+ *
+ * @ingroup Language
+ * @file
+ *
+ * @author Amire80
+ */
+
+$linkTrail = '/^([a-zA-ZɛƐɩƖɔƆʋƲŋŊ̃]+)(.*)$/sDu';
